# botLarry

./: .gitignore  Cargo.toml  GPIO.md  README.md  botlarry.py  conttest.py  hook.py
clock/: readme.txt  tyme.py
data/: calls.db
dev/oled/: dark.py  mcpi-stats.py  newstats.py  shapes.py  stats.py  teststats.py  teststats.py.backup
dev/oled/images/: hackerinside.ppm
dev/stepper/: .stepper.py.swp  stepper.py  stepper.py.v01
devops/oled/: animate.py  image.py
devops/oled/eyes/: .stats.py.swp
devops/oled/images/: sneakers.ppm
grove-button/: grove-button.ino
hardware_control/oled/: animate.py  bleyes.py  buttons.py  dark.py  ekr.py  fullofstars.py  gogo.py  gostats.py  image.py  orlyled.py  pieyes.py  pixeltest.py  pixie.py  shapes.py  stars.py  stats.py  text.py
hardware_control/oled/eyes/: stats.py
hardware_control/oled/images/: accre.ppm
hardware_control/pcA9685/: newpcA.py  pcA9685.py
light_sensative/: light_sensative.ino
r_and_d/sketch_apr16a/: sketch_apr16a.ino
r_and_d/sketch_apr17a/: sketch_apr17a.ino
r_and_d/sketch_feb13d/: sketch_feb13d.ino
r_and_d/sketch_feb13e/: sketch_feb13e.ino
r_and_d/stepper_nano/: stepper_nano.ino
recording/: savemp3.py
sketch_apr17b/: sketch_apr17b.ino
sketch_feb13c/: sketch_feb13c.ino
sprite/: sprite.py
src/: audio.rs  cli.rs  coin_counter.rs  db.rs  gpio.rs  hook.rs  keypad.rs  main.rs  playback.rs  recording.rs  relay_test.rs  tone.rs  volume.rs  web.rs
stepper_nodemcu/: stepper_nodemcu.ino
web/: app.py
web/static/: style.css
web/templates/: .index.html.swp  index.html
