[package]
name = "botLarry"
version = "0.1.0"
edition = "2024"

[dependencies]
rppal = "0.22.1"
ctrlc = "3.4"
rusqlite = { version = "0.35.0", features = ["bundled"] } # Add the latest version
rodio = "0.17"
cpal = "0.15"
once_cell = "1.18"
alsa = "0.7"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["tokio"] }
chrono = "0.4.41"
log = "0.4"
simplelog = "0.12"
